<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="signupViewModel"
            type="com.zakariazarrouki.map.viewModel.SignupViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_above="@id/input_group">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="SIGN UP"
                android:visibility="visible"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Lorem ipsum dolor sit amet."
                android:textColor="#FFFFFF"
                android:visibility="gone"
                android:textSize="16sp"/>

            <ImageView
                android:src="@mipmap/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_top"
                android:hint="@string/username_hint"
                android:afterTextChanged="@{(editable)->signupViewModel.afterUsernameTextChanged(editable)}"
                android:textSize="14dp"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/email_hint"
                android:afterTextChanged="@{(editable)->signupViewModel.afterEmailTextChanged(editable)}"
                android:textSize="14dp"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/txtTele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_middle"
                android:afterTextChanged="@{(editable)->signupViewModel.afterPhoneTextChanged(editable)}"
                android:hint="@string/tele_hint"
                android:textSize="14dp"
                android:inputType="phone"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_middle"
                android:afterTextChanged="@{(editable)->signupViewModel.afterPasswordTextChanged(editable)}"
                android:hint="@string/password_hint"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/reTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_middle"
                android:afterTextChanged="@{(editable)->signupViewModel.afterRePasswordTextChanged(editable)}"
                android:hint="@string/password_hint"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:padding="15dp"/>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:onClick="@{()-> signupViewModel.onSignUpClicked()}"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="S'INSCRIRE"
                android:textAllCaps="false"
                android:textColor="#FE5295"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/signIn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:text="@string/msg_login"
                android:textAllCaps="false"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="#FAD0E1"
                android:fontFamily="sans-serif"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</layout>