<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="loginViewModel"
            type="com.zakariazarrouki.map.viewModel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_above="@id/input_group">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/app_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:visibility="gone"
                android:text="SE CONNECTER"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:visibility="gone"
                android:text="Lorem ipsum dolor sit amet."
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_top"
                android:hint="@string/email_hint"
                android:afterTextChanged="@{(editable)->loginViewModel.afterEmailTextChanged(editable)}"
                android:textSize="14dp"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom"
                android:hint="@string/password_hint"
                android:afterTextChanged="@{(editable)->loginViewModel.afterPasswordTextChanged(editable)}"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/reminder" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Rester connecté"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="SE CONNECTER"
                android:onClick="@{()-> loginViewModel.onLoginClicked()}"
                android:textAllCaps="false"
                android:textColor="#FE5295"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/signUp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:text="@string/msg_signup"
                android:textAllCaps="false"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="#FAD0E1"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</layout>
